# rxai-sdg

./: .gitignore  FIX_REPORT.md  JUDGE_FIX_REPORT.md  README.md  pyproject.toml
audit/: phase2_judge_validation.txt  phase2_judge_validation_qwen.txt
audit/loop/: allfixes_26.json  factfix_20.json  final32.json  gptoss120_20.json  gptoss20_20.json  gptoss20_20b.json  gptoss20_20c.json  iter1.json  iter2.json  iter3.json  iter4.json  iter5.json  iter6.json  iter7.json  iter8.json  iter9.json  newloop_25.json  newloop_25b.json  newloop_25c.json  newloop_iter1.json  newloop_iter2.json  newloop_iter3.json  newloop_iter4.json  newloop_iter5.json  qwen32_20.json  real10.json  real_seeds.json  verify100.json  verify100b.json
reports/: prevalence_pre.json  repair_report.md
src/rxai_sdg/: __init__.py
tests/: conftest.py
tests/factory/: test_concurrency.py  test_constraints.py  test_cross_turn.py  test_dataset.py  test_detectors.py  test_exec_gate.py  test_factuality_voice.py  test_ground_truth.py  test_integration.py  test_judge_prefilter.py  test_ledger.py  test_loop_coherence.py  test_misc_components.py  test_responder_parsing.py  test_sample_quality.py  test_sampler.py  test_schemas.py  test_seed_curator.py  test_user_simulator_grounding.py  test_variants.py  test_verifiers.py  (+1 more)
tools/: _make_seeds100.py  adversarial_reader.py  analyze_records.py  factory_loop.py  iterate.py  judge_fixtures.py  run_detectors.py  scan_emitted.py  seeds.jsonl  seeds100.jsonl  seeds20.jsonl  seeds50.jsonl  seeds_qwen20.jsonl  seeds_real.jsonl  validate_ground_truth.py  validate_judge.py
(+70 files in other folders)
