[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rxai-sdg"
version = "0.2.3"
description = "Reactive AI - Synthetic Datasets Generator"

license = "Apache-2.0"

authors = [
    "Adam Filipek <adamfilipek@rxai.dev>"
]

repository = "https://github.com/RxAI-dev/rxai-sdg"
homepage = "https://rxai.dev/rxai-sdg"

# README file(s) are used as the package description
readme = ["README.md", "LICENSE"]

# Keywords (translated to tags on the package index)
keywords = ["deep-learning", "ai", "machine-learning"]

[tool.poetry.dependencies]
python = ">=3.10"
datasets = "^4.0.0"
huggingface-hub = "^0.30.0"
openai = '^1.82.1'
nltk = '^3.9.1'
ollama = '^0.5.1'

# PyYAML is optional: only required for YAML FactoryConfig files and the
# yaml_valid constraint checker. JSON configs work without it.
pyyaml = { version = "^6.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

